[package]
name = "meme-cli"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A CLI tool to make dank memes, quickly"
repository = "https://github.com/TheRawMeatball/meme-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
memeinator = { path = "memeinator", version = "0.1.0" }
anyhow = "1.0.47"
image = "0.23"
libqoi = "0.2.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "2"


[workspace]
members = [
    "meme-bevy",
    "memeinator",
]

# [patch.'https://github.com/TheRawMeatball/bevy']
# bevy = { path = "../bevy" }

# [patch.'https://github.com/TheRawMeatball/ui4']
# ui4 = { path = "../ui4" }

[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1
