[package]
name = "meme-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
memeinator = { path = "../memeinator" }
anyhow = "1.0.47"
image = "0.23"

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "2"
