[package]
name = "memeinator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheRawMeatball/meme-cli"
description = "A library for generating dank memes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4"
anyhow = "1.0.47"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
image = "0.23"
fontdue = "0.6.2"
